changement du titre

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1>Convertisseur de distances</h1>
+        <h1>Convertisseur de distance</h1>
         <div class="convert">
             <div class="convert-input">
                 <input
