--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
             <button id="convert-btn">Convertir</button>
     </div>
-    <script src="./app2.js"> </script>
+    <script src="./app.js"> </script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
